반응형추가

--- a/index.html
+++ b/index.html
@@ -3,15 +3,75 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
 
-
   <title>TWEET</title>
+
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+
+
+    .header {
+      text-align: center;
+      background-color: #1d9bf0;
+      color: white;
+      padding: 20px;
+      font-size: clamp(18px, 5vw, 24px);
+    }
+
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      padding: 20px;
+    }
+
+    .item {
+      background-color: #1d9bf0;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      border-radius: 5px;
+      width: 120px;
+    }
+
+
+    @media (max-width: 390px) {
+      .header {
+        font-size: 18px;
+        padding: 10px;
+      }
+
+      .item {
+        width: 90px;
+        padding: 10px;
+      }
+    }
+  </style>
 </head>
 
 <body>
+
+  <div class="header">Welcome to TWEET</div>
+
+
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
